# g-challenge

./: README.md  pyproject.toml
src/app/: employee_agenda.py
src/app/agenda/: __init__.py  employee_agenda.py
src/app/domain/: __init__.py  department.py  employee.py  job.py
src/app/employee/: employee.py
src/app/loader/: __init__.py  agenda_data_loader.py
tests/: test_department.py  test_employee.py  test_employee_agenda.py  test_employee_data_loader.py  test_job.py
